syntax = "proto3";

package post_grpc;

option go_package = ".;post_grpc";

message Post {
  uint32 id = 1;
  uint32 user_id = 2;
  string content = 3;
}

message CreatePostRequest {
  Post post=1;
}

message CreatePostResponse {
  Post post=1;
}

message ReadPostRequest {
  uint32 id=1;
}

message ReadPostResponse {
  Post post=1;
}

message UpdatePostRequest {
  Post post=1;
}

message UpdatePostResponse {
  Post post=1;
}

message DeletePostRequest {
  uint32 id=1;
}

message DeletePostResponse {
  Post post=1;
}

message ListPostRequest {
}

message ListPostResponse {
  Post post=1;
}

service PostService {
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse);
  rpc ReadPost(ReadPostRequest) returns (ReadPostResponse);
  rpc UpdatePost(UpdatePostRequest) returns (UpdatePostResponse);
  rpc DeletePost(DeletePostRequest) returns (DeletePostResponse);
  rpc ListPost(ListPostRequest) returns (stream ListPostResponse);
}
